--- a/index.html
+++ b/index.html
@@ -21,7 +21,7 @@
                 <h2>Stockholm</h2>
             </div>
             <div class="destination" id="newyork">
-                <h2>New York</h2>
+                <h2>New York123</h2>
             </div>
         </div>
     </div>
